[package]
name = "spatial_led"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
description = "Sled is an ergonomic rust library that maps out the shape of your LED strips in 2D space to help you create stunning lighting effects."
license = "MIT OR Apache-2.0"
keywords = ["sled", "led", "api", "math", "visualization"]
repository = "https://github.com/davjcosby/sled/"
documentation = "https://docs.rs/spatial_led"
exclude = ["*.gif", "*.cast"]

[features]
default = ["drivers", "scheduler", "spin_sleep", "std"]
drivers = ["compact_str"]

scheduler = []
named_colors = []
std = ["glam/std", "palette/std"]
libm = ["glam/libm", "palette/libm"]
core-simd = ["glam/core-simd"]
async = []
spin_sleep = ["std", "dep:spin_sleep"]

[dependencies]
glam = { version = "0.29", default-features = false, features = [] }
smallvec = "1.13"
compact_str = { version = "0.8", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false }
spin_sleep = { version = "1.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }

palette = { version = "0.7", default-features = false }

rand = { version = "0.8", default-features = false, features = [
    "std",
    "std_rng",
] }

[profile.bench]
lto = true

[profile.release]
strip = "debuginfo"
lto = true

[[bench]]
name = "comet"
harness = false

[[bench]]
name = "ripples"
harness = false

[lib]
bench = false
