[package]
name = "slc_playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slc
slc = { path = "../crates/slc" }
slc_gui = { path = "../crates/slc_gui" }
sweep = { path = "../crates/fx/sweep" }
light_painting = { path = "../crates/fx/light_painting" }
lab_rainbow = { path = "../crates/fx/lab_rainbow" }
calibration = { path = "../crates/fx/calibration" }
warpspeed = { path = "../crates/fx/warpspeed" }
audio_visualizer = { path  = "../crates/fx/audio_visualizer" }
networking = { path = "../crates/networking" }
