[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = { path = "../sled" }
palette = { version = "0.7.3", default-features = false, features = [
    "serializing",
    "std",
    "approx",
] }
colored = "2.0.4"