[package]
name = "sled"
version = "0.2.0"
edition = "2021"

[features]
default = []
named_colors = []

[dependencies]
glam = { version = "0.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
palette = { version = "0.7.3", default-features = false, features = [
    "std",
    "approx",
] }
smallvec = "1.11.2"
micromap = "0.0.14"
compact_str = "0.7"
toml = "0.8.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
lto = true

[[example]]
name = "basic"
path = "examples/basic.rs"
doc-scrape-examples = true

[[bench]]
name = "quirky_trail"
harness = false

[lib]
bench = false
