[package]
name = "sled"
version = "0.2.0"
edition = "2021"

[features]
default = ["drivers"]
drivers = ["micromap", "compact_str", "futures"]
named_colors = []

[dependencies]
glam = { version = "0.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
palette = { version = "0.7.3", default-features = false, features = [
    "std",
    "approx",
] }
toml = "0.8.0"
smallvec = "1.11.2"
futures = { version = "0.3", optional = true }
micromap = { version = "0.0.14", optional = true }
compact_str = { version = "0.7", optional = true }
#spin_sleep = { git = "https://github.com/nyanpasu64/spin-sleep.git", branch = "fix-loop-helper", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
lto = true

[[example]]
name = "basic"
path = "examples/basic.rs"
doc-scrape-examples = true

[[bench]]
name = "quirky_trail"
harness = false

[lib]
bench = false
