[package]
name = "slc_gui_output"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slc
slc_core = { path = "../slc_core" }
slc_output = { path = "../slc_output" }
# bevy
bevy = "0.5.0"
bevy_flycam = "*"