[package]
name = "slc_lab_rainbow"
version = "0.1.0"
authors = ["DavidCosbyUofU <70235806+DavidCosbyUofU@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slc = { path = "../slc" }
lab = "0.10.0"