[package]
name = "audio_visualizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.3"
#anyhow = "1.0.12"
hound = "3.4"
#ringbuf = "0.2"
clap = { version = "2.33.3", default-features = false }
slc = { path = "../../slc" }
